; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_xxhash.c_XXH32_canonicalFromHash.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_xxhash.c_XXH32_canonicalFromHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XXH_CPU_LITTLE_ENDIAN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @XXH32_canonicalFromHash(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 @XXH_STATIC_ASSERT(i32 1)
  %6 = load i64, i64* @XXH_CPU_LITTLE_ENDIAN, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @XXH_swap32(i32 %9)
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @memcpy(i32* %12, i32* %4, i32 4)
  ret void
}

declare dso_local i32 @XXH_STATIC_ASSERT(i32) #1

declare dso_local i32 @XXH_swap32(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
